hphp/test/zend/bad/ext/mbstring/tests/zend_multibyte-08.php
<?php
declare(encoding="CP932");
var_dump(bin2hex("eXg"));
?>